# backend

./: .copier-answers.yml  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  model_description.md  prepare-server.sh  pyproject.toml
.github/workflows/: ci-cd.yml
app/: API.md
app/api/: __init__.py
app/api/ping/: schemas.py  views.py
app/api/project/: enums.py  models.py  views.py
app/core/: accessors.py  config.py  db.py  depends.py  schemas.py  sentry.py  store.py  utils.py  validators.py
app/core/models/: mixins.py
app/core/models/migrations/: env.py  script.py.mako
app/project/: models.py
app/static/: swagger-ui.css
app/templates/: email_confirm.html
myenv/: pyvenv.cfg
