[project]
name = "zit"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.1",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.12",
    "ortools>=9.12.4544",
    "passlib[bcrypt]>=1.7.4",
    "python-slugify>=8.0.4",
    "sentry-sdk[fastapi]>=2.28.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "ruff>=0.11.9",
    "types-passlib>=1.7.7.20250408",
    ]


[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
preview = true

select = ["ALL"]
ignore = [
    "D",                           # Docstring
    "DOC",                         # Docstring
    "ANN",                         # Annotation
    "CPY",                         # Copyright
    "RUF001", "RUF002", "RUF003",  # Contains CYRILLIC LETTER Did you mean LATIN LETTER
    "PLC0415",                     # `import` should be at the top-level of a file
    "ANN401",                      # Dynamically typed expressions (typing.Any) are disallowed
    "SLF001",                      # Private member accessed
    "B903",                        # Dynamically typed expressions (typing.Any) are disallowed
    "TC006",                       # Use of `assert` detected
]

[tool.ruff.lint.pylint]
max-args = 10


[tool.mypy]
python_version = "3.12"
plugins = ['pydantic.mypy']
